--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,1 @@
-chicago.csv
-new_york_city.csv
-washington.csv
-<<<<<<< HEAD
-.gitignore.sublime-workspace
-=======
-.gitignore.sublime-workspace
->>>>>>> aba18539de53a624db02d581e62e1c1e1893eed8
+*.csv
